--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fslock",
+  "name": "qfslock",
   "version": "0.9.0",
   "description": "filesystem mutex using an exclusive-open file",
   "main": "fslock.js",
